cribbage board alignment fix

--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -301,7 +301,7 @@ a.link{
     //determine sizes later
     height: 6em;
     width: 57em;
-    top: 38%;
+    top: 8em;
     right: -25.5em;
     font-size: 1.3em;
   }
